working on net code, now have a way to test without a robot. Thisll probably get built out into something bigger eventually

--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,8 @@ jar {
 wrapper {
    gradleVersion = '5.0'
 }
+
+task run_NorthTestMain(type: JavaExec) {
+   main = "northtest.NorthTestMain"
+   classpath = sourceSets.main.runtimeClasspath
+}
